<resources>
    <string name="app_name">UserScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Установите на вкладке аккаунт</string>
    <string name="nav_header_subtitle">Установите на вкладке аккаунт</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Аккаунт</string>
    <string name="menu_gallery">Информация</string>
    <string name="menu_slideshow">Изображение</string>
    <string name="textAskNewUsername">Введите новое имя</string>
    <string name="hintNewUsername">Новое имя</string>
    <string name="textNewUserEmail">Введите новый email</string>
    <string name="hintNewUserEmail">Новый email</string>
    <string name="textButtonSave">Сохранить</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>